--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ jdk:
 after_success:
   - ls -la ./target
 
+language: python
+matrix:
+  include:
+    - python: "2.7"
+      env: TEST_SUITE=suite_2_7
