--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ after_success:
   - ls -la ./target
 
 language: python
-matrix:
-  include:
-    - python: "2.7"
-      env: TEST_SUITE=suite_2_7
+python:
+    - "2.7"
+
+install:
+    - "pip install -r requirements.txt"
+
+script: nosetests
