--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ before_install:
     - sudo apt-get install -qq tree
     - sudo apt-get install python-nose
 
+after_install:
+    - echo "after_install : " && tree
+
 install:
     - "pip install -r requirements.txt"
 
@@ -29,4 +32,9 @@ after_success:
   - tree
 
 script: ./scripts/run-tests.sh
+
+matrix:
+    exclude:
+        - jdk: oraclejdk7
+          env: FOO=bar BAR=foo
 
