--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,14 @@ notifications:
             - cwczip742@naver.com
         on_success: always
         on_failure: always
+
+# blacklist
+branches:
+    except:
+        - experimental
+        - try-yourself
+
+# whitelist
+branches:
+    only:
+        - master
